[package]
name = "panda-api"
version = "0.1.0"
authors = ["edison <arlicle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
dotenv = "0.15.0"
pretty_env_logger = "0.3.1"
log = "0.4.8"
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.44"
structopt = "0.3.7"
regex = "1.3.1"
walkdir = "2.2.9"
#notify = "5.0.0-pre.2"
notify = "4.0.15"


rand = "0.7.2"

actix-files = "0.2.1"
actix-multipart = "0.2.0"
futures = "0.3.1"




