[package]
name = "panda-api"
version = "0.6.1"
authors = ["edison <arlicle@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-multipart = "0.2.0"

futures = "0.3.1"

dotenv = "0.15.0"
pretty_env_logger = "0.3.1"
log = "0.4.8"
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.44"
json="*"
json5 = "0.2.5"
chrono = "0.4.10"

structopt = "0.3.7"
regex = "1.3.1"
walkdir = "2.2.9"
notify = "4.0.15"

actix-web-actors = "2.0.0"
actix = "0.9.0"

rand = "0.7.2"
dirs = "2.0.2"

regex_generate = "0.2.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2.11", features = ["full"] }





